--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 
 
 body {
-    background: darkgray;
+    /*background: darkgray;*/
     margin: 0;
 }
 
@@ -33,7 +33,6 @@ body {
 }
 
 .slider {
-    margin: auto;
     width: 1000px;
     height: 400px;
     background: white;
@@ -97,7 +96,7 @@ body {
 }
 
 .twitter {
-    width: 90%;
+    width: 100%;
     margin: auto;
 }
 
